feat: 홈 페이지 작성

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -6,3 +6,9 @@ email: wjddms9921@gmail.com
 phone: 010-9921-1047
 github: https://github.com/JEONGEUN0204
 ---
+
+### 안녕하세요. 웹과 앱 환경에서 프론트엔드 개발을 담당하고 있습니다.
+
+### 단순한 기능 구현을 넘어 근본적인 문제 해결과 React 리렌더링 최적화를 통해 성능과 사용자 경험을 개선하는 데 집중해왔습니다.
+
+### 지속적으로 효율적이고 확장 가능한 코드를 고민하며 성장하고 있습니다.
