--- a/data/careers/ezllabs.mdx
+++ b/data/careers/ezllabs.mdx
@@ -15,7 +15,29 @@ tags: -React Native
   -Storybook
   -Confluence
 ---
+### 이즐워크 일일/연속 미션 조회 및 포인트 전환 API 연속 호출 개선
+#### 문제/배경
+- 이즐워크 서비스 내에서 **일일/연속 미션 조회 API**가 불필요하게 연속 호출되는 문제를 발견
+- 포인트 전환 API 또한 버튼 연속 클릭 시 중복 호출이 발생하여 사용자 경험이 저하됨
+#### 해결 및 효과
+- 기존 `useMutation`으로 데이터를 받아오던 로직을 `useQuery`로 변경하여 캐시 활용 및 불필요한 호출 로직을 제거 → **조회 API 호출 75% 감소**  
+- 포인트 전환 API에 버튼 연속 클릭 방지 로직 추가 → **중복 호출 방지**  
+- 연속 호출 에러 발생 시 fallback 처리를 적용 → **사용자 경험 개선 및 안정성 확보**
+___
 
-### [ErrorBoundary 도입 및 적용]
+### ErrorBoundary 도입 및 적용
+#### 문제/배경  
+에러 핸들링 방식이 컴포넌트마다 달라 관리 및 가독성이 떨어지는 문제를 발견
+#### 해결 및 효과
+- `react-error-boundary` 라이브러리 적용  
+  - 페이지 단의 비즈니스 로직에서 불필요한 에러 처리 코드 제거 → **코드 가독성 및 유지보수성 향상**  
+  - 반복되는 에러 핸들링 패턴을 통일 → **개발 생산성 및 일관성 확보**
+___
 
-문제:
+### 디자인 시스템 스토리북 Control 적용
+#### 문제/배경
+- 스토리북에 `controls` 기능이 적용되어 있지 않아, UI 컴포넌트의 디자인이나 상태를 확인하려면 코드를 직접 수정해야 하는 불편함 존재  
+#### 해결 및 효과
+- 스토리북에 `controls`를 적용하여 컴포넌트의 속성(props)을 실시간으로 조정할 수 있도록 개선  
+- 개발자와 디자이너 모두 별도의 코드 수정 없이 **다양한 UI 변화를 즉시 확인 가능**  
+- 컴포넌트 활용도를 높이고, **UI 컴포넌트 확인 및 테스트에 소요되는 개발 시간 단축**  
