fix: siteMetadata 수정 및 프로젝트 이미지 추가

--- a/data/projects/ezl-ai.mdx
+++ b/data/projects/ezl-ai.mdx
@@ -5,6 +5,11 @@ date: 2025-07
 tags:
   - TypeScript
   - Genkit
+images:
+  - /static/images/ezl-ai.png
+imageSize:
+  - 500
+  - 500
 ---
 
 이즐랩스 내부 운영 효율성을 높이기 위해 Jira와 Confluence 데이터를 검색할 수 있는 AI 프로젝트를 진행했습니다.  
