--- a/data/projects/ezl-design-system.mdx
+++ b/data/projects/ezl-design-system.mdx
@@ -7,6 +7,11 @@ tags:
   - TypeScript
   - Genkit
   - Storybook
+  - Expo
+images:
+  - /static/images/ezl-design-system3.png
+  - /static/images/ezl-design-system1.png
+  - /static/images/ezl-design-system2.png
 ---
 
 이즐랩스의 모바일 앱을 위한 디자인 시스템을 구현한 프로젝트입니다.
