--- a/data/careers/ezllabs.mdx
+++ b/data/careers/ezllabs.mdx
@@ -17,7 +17,7 @@ tags:
   - Confluence
 ---
 
-### 이즐워크 일일/연속 미션 조회 및 포인트 전환 API 연속 호출 개선
+### 1. 이즐워크 일일/연속 미션 조회 및 포인트 전환 API 연속 호출 개선
 
 #### 문제/배경
 
@@ -32,7 +32,7 @@ tags:
 
 ---
 
-### ErrorBoundary 도입 및 적용
+### 2. ErrorBoundary 도입 및 적용
 
 #### 문제/배경
 
@@ -46,7 +46,7 @@ tags:
 
 ---
 
-### 디자인 시스템 스토리북 Control 적용
+### 3. 디자인 시스템 스토리북 Control 적용
 
 #### 문제/배경
 
