fix: ezl-charge에 내용 추가

--- a/data/projects/ezl-charge.mdx
+++ b/data/projects/ezl-charge.mdx
@@ -22,4 +22,4 @@ images:
 ✔ 이즐워크에서 API 연속 호출 문제를 개선하여 불필요한 호출을 줄이고 `리소스를 절감함`과 동시에 `사용자 경험을 향상`시켰습니다.<br/>
 ✔ 충전·환불 과정에서 미완료된 거래를 사용자가 재시도할 수 있는 플로우를 구현하여 관련 `CS 인입을 감소`시켰습니다. <br/>
 ✔ Sentry를 활용해 주요 에러를 모니터링하고 해결하여 `Crash Free Rate를 약 3% 향상`시킴으로써 앱 안정성과 사용자 경험을 개선하였습니다.
-
+✔ i18n 라이브러리를 활용해 서비스의 다국어 지원 기능을 구현하였습니다.
