fix: 이즐랩스 기술 스택 수정

--- a/data/careers/ezllabs.mdx
+++ b/data/careers/ezllabs.mdx
@@ -6,6 +6,7 @@ logo: /static/images/ezllabs-logo.png
 duration: 1년 3개월 ~
 tags:
   - React Native
+  - React
   - TypeScript
   - React Query
   - Recoil
